--- a/brjs-core/build.gradle
+++ b/brjs-core/build.gradle
@@ -15,6 +15,7 @@ sourceSets {
 
 configurations {
 	javadocs
+	srcJar
 }
 
 dependencies {
@@ -75,8 +76,14 @@ task javadocZip, type:Zip, dependsOn:javadoc, {
 	into "javadoc"
 }
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+	classifier = 'sources'
+	from sourceSets.main.allSource
+}
+
 artifacts {
 	javadocs javadocZip
+	srcJar sourcesJar
 }
 
 task zipJsDocResources, type:Zip, dependsOn: processResources, {
