add HTML bundling

--- a/brjs-core/build.gradle
+++ b/brjs-core/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 	compile dependency('sjsxp')
 	compile dependency('dom4j')
 	compile dependency('utils')
+	compile dependency('jericho-html')
 	
 	/* woodstox deps */
 	compile dependency('woodstox-core-asl')
