--- a/cutlass-sdk/build.gradle
+++ b/cutlass-sdk/build.gradle
@@ -236,7 +236,7 @@ task downloadExampleApps, {
 
 task extractExampleApps, type:Copy, dependsOn:downloadExampleApps, {
 	from zipTree( tasks.downloadExampleApps.outputs.files.singleFile )
-	into "workspace/apps"
+	into "workspace/apps/example-app-brjs-todo"   // Temporarily changing to explicit folder
 	includeEmptyDirs = false
 	eachFile {
 		it.path = it.path.replaceFirst("[A-Za-z0-9-_]+/","")
