Removing @Ignore for the UTF-8 tests, making gradle set the defaultEncoding to UTF-8 This was causing issues on windows where it would pass in the IDE but fail when run by gradle

--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,7 @@ subprojects { p ->
 					
 			project.tasks.withType(Test) { testTask ->
 				test {
+                    setDefaultCharacterEncoding 'UTF-8'
 					testLogging {
 						events 'skipped', 'failed'
 						exceptionFormat 'full'
