--- a/cutlass-tasks/build.gradle
+++ b/cutlass-tasks/build.gradle
@@ -14,6 +14,7 @@ dependencies {
 
 	/* compile only so it isnt considered a transitive dependency - any projects that depend on this project and selenium-java will need to explicitly add it as a dependency */
 	compileOnly dependency('selenium-java')
+	compileOnly dependency('servlet-api')
 	compileOnly project(":brjs-logger-binding")
 
 	runtime dependency('saxon-dom')
