changing jstd plugin path after sdk restructure

--- a/cutlass-sdk/workspace/sdk/libs/javascript/br-libs/core/tests/test-unit/js-test-driver/jsTestDriver.conf
+++ b/cutlass-sdk/workspace/sdk/libs/javascript/br-libs/core/tests/test-unit/js-test-driver/jsTestDriver.conf
@@ -3,7 +3,7 @@ basepath: .
 
 plugin:
   - name: "BundleInjector"
-    jar: ../../../../../../../../libs/java/testRunner/js-test-driver-bundler-plugin.jar
+    jar: ../../../../../../../libs/java/testRunner/js-test-driver-bundler-plugin.jar
     module: com.caplin.jstestdriver.plugin.CutlassBundleInjectorPlugin
 
 load:
