Added spec tests for the war command, including true BDD style tests that verify the produced war actually works. Introduced a BRJS.workingDir() feature that allows commands that want to create files relative to the working directory to do so -- at the moment the working directory is always exactly the same as the root BRJS directory, but this won't be the case in the future.

--- a/brjs-core/build.gradle
+++ b/brjs-core/build.gradle
@@ -49,6 +49,7 @@ dependencies {
 	compileOnly dependency('servlet-api')
 	compileOnly dependency('junit')
 	compileOnly dependency('mockito-core')
+	compileOnly dependency('fluent-hc')
 	compileOnly dependency('httpclient')
 	compileOnly dependency('hamcrest-all')
 	
