--- a/cutlass-tasks/build.gradle
+++ b/cutlass-tasks/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 	testCompile dependency('mockito-core')
 	testCompile dependency('httpclient')
 	testCompile dependency('hamcrest-all')
+	testCompile dependency('jetty-all-server')
 	
 	testRuntime project(path: ':brjs-logger-binding')
 }
