--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -55,9 +55,10 @@ Dependencies.putAll([
 	'commons-codec'				:	'commons-codec:commons-codec:1.6',
 	'commons-fileupload'		:	'commons-fileupload:commons-fileupload:1.2',
 
-	'httpclient'				:	'org.apache.httpcomponents:httpclient:4.2.1',
-	'httpcore'					:	'org.apache.httpcomponents:httpcore:4.2.1',
-	'httpmime'					:	'org.apache.httpcomponents:httpmime:4.1.2',
+	'httpclient'				:	'org.apache.httpcomponents:httpclient:4.2.5',
+	'httpcore'					:	'org.apache.httpcomponents:httpcore:4.2.5',
+	'httpmime'					:	'org.apache.httpcomponents:httpmime:4.2.5',
+	'fluent-hc'					:	'org.apache.httpcomponents:fluent-hc:4.2.5',
 
 	'selenium-java'				:	'org.seleniumhq.selenium:selenium-java:2.24.1',
 
