--- a/old-bladerunner-tests/build.gradle
+++ b/old-bladerunner-tests/build.gradle
@@ -15,6 +15,8 @@ dependencies {
 	testCompile dependency('bonecp')
 	testCompile dependency('servlet-api')
 	testCompile dependency('httpclient')
+	testCompile dependency('mockito-core')
+	testCompile dependency('fluent-hc')
 	
 	testRuntime project(path: ':brjs-logger-binding')
 }
