adding WEB-INF helper script This is a temporary measure, but VERY helpful and much better than having a command soewhere that has to be copied and executed every so often

--- a/cutlass-sdk/.gitignore
+++ b/cutlass-sdk/.gitignore
@@ -20,6 +20,7 @@ workspace/licenses/
 workspace/sdk/brjs
 workspace/sdk/brjs.cmd
 workspace/sdk/docs/
+workspace/sdk/scripts
 workspace/sdk/jsdoc-templates/
 workspace/sdk/jsdoc-toolkit/
 workspace/sdk/libs/java/
