--- a/package.json
+++ b/package.json
@@ -2,23 +2,23 @@
   "name": "browser-modules",
   "version": "0.0.0",
   "description": "A simple define/require for the browser.",
-  "homepage": "http://kybernetikos.github.io/browser-modules",
+  "homepage": "http://bladerunnerjs.github.io/browser-modules",
   "main": "browser-modules.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/kybernetikos/browser-modules.git"
+    "url": "https://github.com/BladeRunnerJS/browser-modules"
   },
   "keywords": [
     "define",
     "require",
     "commonjs"
   ],
-  "author": "kybernetikos <me@kybernetikos.com>",
-  "license": "BSD",
+  "author": "kybernetikos & the BladeRunnerJS team <bladerunnerjs@caplin.com>",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kybernetikos/browser-modules/issues"
+    "url": "https://github.com/BladeRunnerJS/browser-modules/issues"
   }
 }
