Start putting the locale bundle first as we tend to do within the application, plus stop indicating that we can choose the locale we want, which is no longer the case.

--- a/cutlass-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/tests/test-acceptance/js-test-driver/jsTestDriver.conf
+++ b/cutlass-sdk/workspace/sdk/system-applications/dashboard/dashboard-bladeset/blades/app/tests/test-acceptance/js-test-driver/jsTestDriver.conf
@@ -7,8 +7,8 @@ plugin:
     module: com.caplin.jstestdriver.plugin.CutlassBundleInjectorPlugin
 
 load:
+  - bundles/i18n/i18n.bundle
   - bundles/js/js.bundle
-  - bundles/i18n/en_i18n.bundle
 
 serve:
   - bundles/html.bundle
