--- a/cutlass-sdk/workspace/sdk/libs/javascript/br-libs/presenter/tests/test-unit/js-test-driver/jsTestDriver.conf
+++ b/cutlass-sdk/workspace/sdk/libs/javascript/br-libs/presenter/tests/test-unit/js-test-driver/jsTestDriver.conf
@@ -7,6 +7,7 @@ plugin:
     module: com.caplin.jstestdriver.plugin.CutlassBundleInjectorPlugin
 
 load:
+  - bundles/i18n/i18n.bundle
   - bundles/js/js.bundle
 
 serve:
