Updated BRJSConformantAssetPlugin so that test 'resources' are bundled.

--- a/cutlass-sdk/workspace/sdk/libs/javascript/br-libs/presenter/tests/test-unit/js-test-driver/resources/en.properties
+++ b/cutlass-sdk/workspace/sdk/libs/javascript/br-libs/presenter/tests/test-unit/js-test-driver/resources/en.properties
@@ -1,5 +1,5 @@
-ct.element.number.formatting.multiplier.l=50
-ct.element.number.formatting.multiplier.c=100
-ct.element.number.formatting.multiplier.x=10
+br.presenter.number.formatting.multiplier.l=50
+br.presenter.number.formatting.multiplier.c=100
+br.presenter.number.formatting.multiplier.x=10
 
-i18ntesttoken=i18nErrorMessage
+br.presenter.i18ntesttoken=i18nErrorMessage
