Changed the name of the character encoding properties we provide in 'bladerunner.conf' so that people can actually understand what they are really for, since the old names were slightly cryptic, leading to misunderstandings and bugs.

--- a/brjs-core/src/test/resources/BRJSTest/conf/bladerunner.conf
+++ b/brjs-core/src/test/resources/BRJSTest/conf/bladerunner.conf
@@ -1,4 +1,4 @@
 jettyPort: 7070
-defaultInputEncoding: UTF-8
-defaultOutputEncoding: UTF-8
+defaultFileCharacterEncoding: UTF-8
+browserCharacterEncoding: UTF-8
 loginRealm: BRJSLoginRealm
