using seperate tasks for JS tests so we can individually disable libraries that arent passing

--- a/cutlass-sdk/build.gradle
+++ b/cutlass-sdk/build.gradle
@@ -195,7 +195,7 @@ task assembleSdk, type: Copy, dependsOn: [configurations.system, configurations.
 
 def createTestTask = { taskName, taskTestDir, taskTestType, browser ->
 	task taskName, type: com.caplin.gradle.tasks.RunJstdTests, {
-		description = "Run ${testType} for ${testDir}"
+		description = "Run ${testType} for ${taskTestDir} using ${browser}"
 		dependsOn = [assemble, copyBrowsers]
 		inputs.dir file("workspace/apps/")
     	inputs.dir file("workspace/sdk/")
@@ -207,9 +207,33 @@ def createTestTask = { taskName, taskTestDir, taskTestType, browser ->
 	}
 }
 
-createTestTask "testJsIE", "libs/javascript", "ALL", "ie"
-createTestTask "testJsChrome", "libs/javascript", "ALL", "chrome"
-createTestTask "testJsFirefox", "libs/javascript", "ALL", "firefox"
+//TODO: enable these once all JS tests are passing
+//createTestTask "testJsIE", "libs/javascript", "ALL", "ie"
+//createTestTask "testJsChrome", "libs/javascript", "ALL", "chrome"
+//createTestTask "testJsFirefox", "libs/javascript", "ALL", "firefox"
+
+
+//TODO: delete this once all JS tests are passing
+task testJsIE, {}
+task testJsChrome, {}
+task testJsFirefox, {}
+
+file("workspace/sdk/libs/javascript/br-libs").listFiles().each {
+	if (it.isDirectory())
+	{
+		def dirName = it.getName()
+		def testName = dirName.capitalize()
+		def testJsIEDependency = createTestTask "testJs${testName}IE", "libs/javascript/br-libs/${dirName}", "ALL", "ie"
+		def testJsChromeDependency = createTestTask "testJs${testName}Chrome", "libs/javascript/br-libs/${dirName}", "ALL", "chrome"
+		def testJsFirefoxDependency = createTestTask "testJs${testName}Firefox", "libs/javascript/br-libs/${dirName}", "ALL", "firefox"
+		
+		testJsIE.dependsOn testJsIEDependency
+		testJsChrome.dependsOn testJsChromeDependency
+		testJsFirefox.dependsOn testJsFirefoxDependency
+	}
+}
+// delete up to here
+
 
 createTestTask "testSystemAppsIE", "system-applications", "ALL", "ie"
 createTestTask "testSystemAppsChrome", "system-applications", "ALL", "chrome"
