--- a/build.gradle
+++ b/build.gradle
@@ -214,13 +214,13 @@ task generateReleaseNotes, {
 		assembledReleaseNotesFile.text += "\n\n"
 		assembledReleaseNotesFile.text += "-------------\n"
 		assembledReleaseNotesFile.text += "### Closed Issues\n"
-		assembledReleaseNotesFile.text += "<sup>${issues.size} issues closed; ${releaseNoteIssues.size} labelled ${issueIncludeLabelsString} - "
+		assembledReleaseNotesFile.text += "<sup>${issues.size} issues closed; ${releaseNoteIssues.size} labelled ${issueIncludeLabelsString} from ${milestoneIds.size} milestones: "
 		milestoneIds.each { milestoneId ->
-			if (milestoneId != milestoneIds.first()) { assembledReleaseNotesFile.text += ", " }
+			if (milestoneId != milestoneIds.first()) { assembledReleaseNotesFile.text += "; " }
 			def milestoneUrl = githubApi.getMilestoneUrl(milestoneId)
-			assembledReleaseNotesFile.text += "<a href=\"${milestoneUrl}\">${milestoneUrl}</a><sup>"
+			assembledReleaseNotesFile.text += "<a href=\"${milestoneUrl}\">${milestoneUrl}</a>"
 		}
-		assembledReleaseNotesFile.text += "\n\n"
+		assembledReleaseNotesFile.text += "</sub>\n\n"
 		releaseNoteIssues.each {
 			assembledReleaseNotesFile.text += "- ${it.toString()}\n"
 		}
