Fixed a test that was failing because it wanted to use Roman amount suffixes that are not normally defined, and European rather than British/American number separators. Changed just to rely on the non standard amount suffixes since this can be done using the bundler alone, and does not need i18n to be re-defined within the test.

--- a/cutlass-sdk/workspace/sdk/libs/javascript/br-libs/presenter/tests/test-unit/js-test-driver/resources/en.properties
+++ b/cutlass-sdk/workspace/sdk/libs/javascript/br-libs/presenter/tests/test-unit/js-test-driver/resources/en.properties
@@ -1,5 +1,5 @@
-br.presenter.number.formatting.multiplier.l=50
-br.presenter.number.formatting.multiplier.c=100
-br.presenter.number.formatting.multiplier.x=10
+br.presenter.parser.number.formatting.multiplier.l=50
+br.presenter.parser.number.formatting.multiplier.c=100
+br.presenter.parser.number.formatting.multiplier.x=10
 
 br.presenter.i18ntesttoken=i18nErrorMessage
