--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: java
+before_install:
+    - "export DISPLAY=:99.0"
+    - "sh -e /etc/init.d/xvfb start"
 install:
     - TERM=dumb ./gradlew compileJava
 script:
     - TERM=dumb ./gradlew testJava
+    - TERM=dumb ./gradlew :cutlass-sdk:test
