Early commit of the 'gradle-retrolambda' plug-in so others can inspect the problem I'm observing when using it.

--- a/brjs-core/build.gradle
+++ b/brjs-core/build.gradle
@@ -1,6 +1,11 @@
 
 apply plugin: 'java'
+apply plugin: 'retrolambda'
 apply plugin: com.caplin.gradle.plugins.CompileOnly
+
+retrolambda {
+  javaVersion JavaVersion.VERSION_1_7
+}
 
 sourceSets {
 	test {
