Updated retrolambda to version 1.1.4, which fixes a bug that was preventing our code from compiling -- we will still need to update Travis to set the JAVA7_HOME environment variable before the build will go green.

--- a/brjs-core/build.gradle
+++ b/brjs-core/build.gradle
@@ -24,6 +24,8 @@ configurations {
 }
 
 dependencies {
+	retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:1.1.4'
+	
 	compile project(":brjs-logger")
 	compile dependency('commons-io')
 	compile dependency('commons-lang3')
