--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: java
 jdk:
+    - oraclejdk7
     - oraclejdk8
 
+before_install:
+    - export JAVA7_HOME=/usr/lib/jvm/java-7-oracle
+    - export JAVA8_HOME=/usr/lib/jvm/java-8-oracle
 install:
     - TERM=dumb ./gradlew compileJava
 script:
