--- a/cutlass-sdk/build-resources/test-runner.conf
+++ b/cutlass-sdk/build-resources/test-runner.conf
@@ -9,20 +9,20 @@ defaultBrowser: chrome
 
 browserPaths:
   windows: 
-    chrome: ../../build/browsers/chrome-win32-27.0.1453.110/chrome.exe$$--incognito$$--user-data-dir=../../build/browsers/profile/chromium
+    chrome: ../../build/browsers/chrome-win32-27.0.1453.110/chrome.exe --incognito --user-data-dir=../../build/browsers/profile/chromium
     chromedriver: ../../build/browsers/chromedriver.exe
-    firefox: ../../build/browsers/firefox-win32-21.0/Firefox.exe$$-private$$-profile$$../../build/browsers/profile/firefox
-    firefox-webdriver: ../../build/browsers/firefox-win32-12.0/Firefox.exe$$-private-profile$$../../build/browsers/profile/firefox
+    firefox: ../../build/browsers/firefox-win32-21.0/Firefox.exe -private -profile ../../build/browsers/profile/firefox
+    firefox-webdriver: ../../build/browsers/firefox-win32-12.0/Firefox.exe -private-profile ../../build/browsers/profile/firefox
     ie: 'C:\Program Files\Internet Explorer\iexplore.exe'
   mac:
-    chrome: ../../build/browsers/chrome-mac-27.0.1453.110/Contents/MacOS/Chrome$$--incognito$$--user-data-dir=../../build/browsers/profile/chromium
+    chrome: ../../build/browsers/chrome-mac-27.0.1453.110/Contents/MacOS/Chrome --incognito --user-data-dir=../../build/browsers/profile/chromium
     chromedriver: ../../build/browsers/chromedriver
-    firefox: ../../build/browsers/firefox-mac-21.0/Firefox.app/Contents/MacOS/firefox$$-private
-    firefox-webdriver: ../../build/browsers/firefox-mac-12.0/Firefox.app/Contents/MacOS/firefox$$-private
+    firefox: ../../build/browsers/firefox-mac-21.0/Firefox.app/Contents/MacOS/firefox -private
+    firefox-webdriver: ../../build/browsers/firefox-mac-12.0/Firefox.app/Contents/MacOS/firefox -private
     safari6: /Applications/Safari.app/Contents/MacOS/Safari
 # firefox on Mac doesnt use a custom profile because of a bug with the profile argument (https://bugzilla.mozilla.org/show_bug.cgi?id=673955)
   linux:
-    chrome: ../../build/browsers/chrome-linux/chrome$$--incognito$$--user-data-dir=../../build/browsers/profile/chromium
+    chrome: ../../build/browsers/chrome-linux/chrome --incognito --user-data-dir=../../build/browsers/profile/chromium
     chromedriver: ../../build/browsers/chromedriver
-    firefox: ../../build/browsers/firefox-linux-21.0/firefox$$-private$$-profile$$../../build/browsers/profile/firefox$$--no-remote
-    firefox-webdriver: ../../build/browsers/firefox-linux-12.0/firefox$$-private$$-private$$-profile$$../../build/browsers/profile/firefox
+    firefox: ../../build/browsers/firefox-linux-21.0/firefox -private -profile ../../build/browsers/profile/firefox --no-remote
+    firefox-webdriver: ../../build/browsers/firefox-linux-12.0/firefox -private -private -profile ../../build/browsers/profile/firefox
