--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -20,7 +20,9 @@ ext {
  * 			'jetty-all-server'	:	'org.eclipse.jetty.aggregate:jetty-all-server:8.1.0.v20120127'
  */
 Dependencies.putAll([
-
+	'gradle-retrolambda'		:	'me.tatarka:gradle-retrolambda:1.3.0',
+	'retrolambda'				:	'net.orfjackal.retrolambda:retrolambda:1.1.4',
+	
 	'jetty-all-server'			:	'org.eclipse.jetty.aggregate:jetty-all-server:7.6.4.v20120524',	/* version should be 7.x - this version uses servlet api v2.5 */
 	'jsp-2.1-glassfish'			:	'org.mortbay.jetty:jsp-2.1-glassfish:2.1.v20100127',
 	'jta'						:	'javax.transaction:jta:1.1',
