Configured our Javadoc task to use the `javadoc` command from `JAVA8_HOME`, rather than the default one from `JAVA_HOME`, plus deleted some duplicate config.

--- a/brjs-core/build.gradle
+++ b/brjs-core/build.gradle
@@ -83,11 +83,7 @@ javadoc {
 	/* info for JavaDoc options http://docs.oracle.com/javase/6/docs/technotes/tools/windows/javadoc.html#overviewcomment */
 	options.overview = "${sourceSets.main.java.srcDirs.toArray()[0]}/overview-summary.html"
 	maxMemory = "128m"
-}
-
-javadoc {
-	title = "BladeRunnerJS ${buildVersion}"
-	classpath += project.configurations.compileOnly
+	executable = "$System.env.JAVA8_HOME/bin/javadoc"
 }
 
 task javadocZip, type:Zip, dependsOn:javadoc, {
