fixing javadoc paths used in checkSdkStructure task

--- a/cutlass-sdk/build.gradle
+++ b/cutlass-sdk/build.gradle
@@ -309,7 +309,8 @@ task checkSdkStructure, type:com.caplin.gradle.tasks.CheckDirectoryStructure, de
 		"*/sdk/system-applications/*/WEB-INF/lib/*",
 		"*/sdk/templates/*/*",
 		"*/sdk/templates/*/tests/*",
-		"*/sdk/docs/javadoc/*/*",
+        "*/sdk/docs/javadoc/*",
+		"*/sdk/docs/javadoc/**/*",
 		"*/README.txt",
 		"*/LICENSE",
 		"*/apps/apps.txt",
