--- a/cutlass-sdk/build-resources/includes/sdk/templates/bladeset-js-test-driver-template/jsTestDriver.conf
+++ b/cutlass-sdk/build-resources/includes/sdk/templates/bladeset-js-test-driver-template/jsTestDriver.conf
@@ -4,7 +4,7 @@ basepath: .
 plugin:
   - name: "BundleInjector"
     jar: ../../../../../../sdk/libs/java/testRunner/js-test-driver-bundler-plugin.jar
-    module: com.caplin.jstestdriver.plugin.CutlassBundleInjectorPlugin
+    module: org.bladerunnerjs.jstestdriver.BRJSBundleInjector
 
 load:
   - bundles/js/js.bundle
