--- a/cutlass-sdk/workspace/sdk/libs/javascript/br-libs/presenter/tests/test-unit/js-test-driver/jsTestDriver.conf
+++ b/cutlass-sdk/workspace/sdk/libs/javascript/br-libs/presenter/tests/test-unit/js-test-driver/jsTestDriver.conf
@@ -4,7 +4,7 @@ basepath: .
 plugin:
   - name: "BundleInjector"
     jar: ../../../../../../../libs/java/testRunner/js-test-driver-bundler-plugin.jar
-    module: org.bladerunnerjs.jstestdriver.BRJSBundleInjector
+    module: org.bladerunnerjs.jstestdriver.BRJSBundleHandler
 
 load:
   - bundles/i18n/i18n.bundle
