removing change to GitHub release task that shouldnt have crept in

--- a/build.gradle
+++ b/build.gradle
@@ -252,8 +252,7 @@ task generateReleaseNotes, {
 }
 
 
-//task githubRelease, dependsOn:[generateReleaseNotes, ':cutlass-sdk:distZip', build], {
-	task githubRelease, dependsOn:[generateReleaseNotes, ':cutlass-sdk:distZip'], {
+task githubRelease, dependsOn:[generateReleaseNotes, ':cutlass-sdk:distZip', build], {
 	doLast {
 		def cutlassSdkProject = project(':cutlass-sdk')
 		def brjsZipPattern = "**/BladeRunnerJS-${projectBuildVersion}.zip"
