adding build status for release version to release note

--- a/build.gradle
+++ b/build.gradle
@@ -214,6 +214,8 @@ task generateReleaseNotes, {
 		appendToReleaseNotes << ""
 		appendToReleaseNotes << "<br/>"
 		appendToReleaseNotes << "-------------"
+		appendToReleaseNotes << "**Travis Build Status for @tagVersion@:**&nbsp;&nbsp;&nbsp;[![Build Status](https://travis-ci.org/BladeRunnerJS/brjs.svg?branch=@tagVersion@)](https://travis-ci.org/BladeRunnerJS/brjs)"
+		appendToReleaseNotes << ""		
 		appendToReleaseNotes << "### Closed Issues"
 		appendToReleaseNotes << "The following issues labelled ${issueIncludeLabelsString} have been closed:"
 		appendToReleaseNotes << ""
