using a newer version of guava and adding it to JSTD plugin so we can support closure minifier in jstd conf

--- a/js-test-driver-bundler-plugin/build.gradle
+++ b/js-test-driver-bundler-plugin/build.gradle
@@ -6,6 +6,7 @@ dependencies {
 	compile project(':bundlers')
 	compile project(':brjs-logger-binding')
 	compile dependency('commons-lang3')
+	compile dependency('guava')
 	
 	compileOnly dependency('JsTestDriver')
 
