deleting js-test-driver-bundler-plugin Gradle project

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,7 @@
-include "bundlers",
- 		"bladerunner-dev-servlets",
-		"bladerunner-common-servlets",
+include "bladerunner-common-servlets",
 		"bladerunner-prod-servlets",
 		"cutlass-tasks",
 		"cutlass-common",
-		"js-test-driver-bundler-plugin",
 		"cutlass-sdk",
 		"system-app-servlets",
 		"brjs-core",
