adding jars to enable JSP support in BRJS dev server (fixes #596)

--- a/cutlass-sdk/build.gradle
+++ b/cutlass-sdk/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 	system project(path: ':brjs-logger')
 	system project(":brjs-logger-binding")
 	system dependency('selenium-java')
+	system dependency('jetty-jsp')
 
 	application project(path: ':bladerunner-common-servlets')
 	application project(path: ':bladerunner-prod-servlets')
