--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -24,7 +24,8 @@ Dependencies.putAll([
 	'retrolambda'				:	'net.orfjackal.retrolambda:retrolambda:1.1.4',
 	
 	'jetty-all-server'			:	'org.eclipse.jetty.aggregate:jetty-all-server:7.6.4.v20120524',	/* version should be 7.x - this version uses servlet api v2.5 */
-	'jsp-2.1-glassfish'			:	'org.mortbay.jetty:jsp-2.1-glassfish:2.1.v20100127',
+	'jetty-jsp'					:	'org.eclipse.jetty:jetty-jsp:7.6.4.v20120524', /* this must be the same version as the Jetty version above */
+	
 	'jta'						:	'javax.transaction:jta:1.1',
 	'bonecp'					:	'com.jolbox:bonecp:0.7.1.RELEASE',
 	'h2'						:	'com.h2database:h2:1.3.167',
